--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,11 @@
   }
 }
 
+.modal-map {
+  width: 100%;
+  height: 300px;
+}
+
 .image-container {
   display: inline-block;
 }
@@ -25,4 +30,11 @@
 .image-preview-wrapper {
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+.map-controls {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 10;
 }
