--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,7 +15,7 @@
 
 .modal-map {
   width: 100%;
-  height: 300px;
+  height: 400px;
 }
 
 .image-container {
@@ -30,6 +30,7 @@
 .image-preview-wrapper {
   margin-top: 20px;
   margin-bottom: 20px;
+  max-height: calc(100vh - 400px);
 }
 
 .map-controls {
@@ -37,4 +38,8 @@
   top: 10px;
   right: 10px;
   z-index: 10;
+}
+
+.cropper-modal {
+  background: transparent;
 }
