--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,8 @@
-@import "minireset.css/minireset.sass";
-@import "leaflet/dist/leaflet";
-@import "~cropperjs/src/css/cropper";
-@import "variables";
-@import "bulma";
+@import 'minireset.css/minireset.sass';
+@import 'leaflet/dist/leaflet';
+@import '~cropperjs/src/css/cropper';
+@import 'variables';
+@import 'bulma';
 
 .graff-map {
   width: 100vw;
@@ -28,18 +28,86 @@
 }
 
 .image-preview-wrapper {
-  margin-top: 20px;
   margin-bottom: 20px;
+  margin-top: 20px;
   max-height: calc(100vh - 400px);
 }
 
 .map-controls {
   position: absolute;
-  top: 10px;
   right: 10px;
+  top: 10px;
   z-index: 10;
 }
 
 .cropper-modal {
   background: transparent;
+}
+
+.photo-fullsize {
+  display: block;
+  height: auto;
+  width: 100%;
+}
+
+$timeline-height: 6px;
+$timeline-dot-size: 32px;
+
+.timeline {
+  bottom: $timeline-dot-size / 2;
+  height: $timeline-dot-size;
+  left: $timeline-dot-size;
+  padding-left: $timeline-dot-size / 2;
+  padding-right: $timeline-dot-size / 2;
+  position: absolute;
+  right: $timeline-dot-size;
+}
+
+.timeline-track {
+  background: black;
+  border: 1px solid white;
+  border-radius: $timeline-height / 2;
+  height: $timeline-height;
+  left: 0;
+  position: absolute;
+  top: ($timeline-dot-size / 2) - ($timeline-height / 2);
+  width: 100%;
+}
+
+.timeline-marker {
+  height: $timeline-dot-size;
+  background: black;
+  border: 1px solid white;
+  border-radius: 50%;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  transform: translateX(-50%);
+  width: $timeline-dot-size;
+  z-index: 2;
+
+  &.is-active {
+    background: white;
+    border-color: black;
+  }
+
+  &:hover + .timeline-marker-label {
+    display: block;
+  }
+}
+
+.timeline-marker-label {
+  position: absolute;
+  bottom: 40px;
+  background: white;
+  color: black;
+  display: none;
+  padding: 5px;
+  max-width: 100%;
+  width: 100px;
+  text-align: center;
+
+  &:hover {
+    display: block;
+  }
 }
