--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -65,7 +65,7 @@ $timeline-dot-size: 32px;
 
 .timeline-track {
   background: black;
-  border: 1px solid white;
+  border: 2px solid white;
   border-radius: $timeline-height / 2;
   height: $timeline-height;
   left: 0;
@@ -77,7 +77,7 @@ $timeline-dot-size: 32px;
 .timeline-marker {
   height: $timeline-dot-size;
   background: black;
-  border: 1px solid white;
+  border: 2px solid white;
   border-radius: 50%;
   cursor: pointer;
   position: absolute;
@@ -110,4 +110,8 @@ $timeline-dot-size: 32px;
   &:hover {
     display: block;
   }
+}
+
+.modal-content.is-loading {
+  color: white;
 }
